ability to change lang

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,8 @@
     "3": {
       "1": "My projects",
       "2": "Contact"
-    }
+    },
+    "changeLanguage": "speak Polish?"
   },
   "belowTop": {
     "1": "A little bit about me",
