--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -12,7 +12,8 @@
     "3": {
       "1": "Moje projekty",
       "2": "Kontakt"
-    }
+    },
+    "changeLanguage": "speak English?"
   },
   "belowTop": {
     "1": "Coś o mnie",
