--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,7 @@
   },
   "belowTop": {
     "1": "A little bit about me",
-    "2": "My name is Jakub. I’m a self-taught full-stack developer. My go-to technologies are React and Laravel. I’m keen on designing and visuals. Aside from computer science I’m aslo passionate about foreign languages."
+    "2": "My name is Jakub. I’m a self-taught full-stack developer. My go-to technologies are React and Laravel. I’m keen on designing and visuals. Aside from computer science I’m also passionate about foreign languages."
   },
   "technologies": {
     "1": {
