--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
     },
     "3": {
       "1": "My projects",
-      "2": "Contact"
+      "2": "Resume"
     },
     "changeLanguage": "speak Polish?"
   },
