--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -11,7 +11,7 @@
     },
     "3": {
       "1": "Moje projekty",
-      "2": "Kontakt"
+      "2": "Moje CV"
     },
     "changeLanguage": "speak English?"
   },
