--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,9 @@
     "1": "My highlighted projects",
     "2": {
       "1": "Detailed info",
-      "2": "Source code"
+      "2": "Source code",
+      "3": "Watch video",
+      "4": "Stop video "
     }
   },
   "contact": {
@@ -47,6 +49,25 @@
         "2": "Avaliable for",
         "3": "Category"
       }
+    }
+  },
+  "footer": {
+    "1": {
+      "1": "Attributions:",
+      "2": "Thank you for letting me use your assets."
+    },
+    "2": {
+      "1": "Quick links",
+      "2": {
+        "1": "Dom",
+        "2": "O mnie",
+        "3": "Technolgie",
+        "4": "Projekty"
+      }
+    },
+    "3": {
+      "1": "Contact",
+      "2": "Resume"
     }
   }
 }
