--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -17,7 +17,7 @@
   },
   "belowTop": {
     "1": "Coś o mnie",
-    "2": "Nazywam się Jakub. Jestem full-stack deweloperem. Moimi ulobionymi technologiami są React i Laravel. Lubię również design. Poza programowaniem, interesuję się nauką języków obcych."
+    "2": "Nazywam się Jakub. Jestem full-stack deweloperem. Zazwyczaj tworzę strony w React i Laravel. Lubię również web design. Poza programowaniem, interesuję się nauką języków obcych."
   },
   "technologies": {
     "1": {
