--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,8 @@
       "1": "Detailed info",
       "2": "Source code",
       "3": "Watch video",
-      "4": "Stop video "
+      "4": "Stop video ",
+      "5": "<- Go back"
     }
   },
   "contact": {
