--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -31,7 +31,8 @@
       "1": "Więcej info",
       "2": "Kod źródłowy",
       "3": "Obejrzyj wideo",
-      "4": "Zatrzymaj wideo"
+      "4": "Zatrzymaj wideo",
+      "5": "<- Powrót"
     }
   },
   "contact": {
